# sdp-adserver-demo

./: .beads-sdp-mapping.jsonl  .cursorrules  .env.example  .gitattributes  .gitignore  .gitmessage  .gitmodules  .sdp-root  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  PRODUCT_VISION.md  README.md  SECURITY.md  ci-gates.toml  coverage.out  demo-simple-test.html  docker-compose.yml  go.mod  go.sum  open-browsers.bat  package-lock.json  package.json  playwright.config.js  pyproject.toml  quality-gate.toml  test-ads.html  test_hook_v3.md
.beads/: issues.jsonl
.claude/: settings.json
.cursor/: README.md
.github/: dependabot.yml
.opencode/: README.md  opencode.json
.sdp/: state.json  tier_metrics.json
advertiser-portal/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
demo-website/: .dockerignore  .env.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json
docs/: AGENT_TEAMS.md  DEPRECATION_NOTICE.md  INCIDENT_RESPONSE.md  PROJECT_MAP.md  PROTOCOL.md  SITEMAP.md  SLOS.md  tutorial.md  workflow-decision.md
examples/: error_examples.py
hooks/: install-hooks.sh  post-build.sh  post-codereview.sh  post-commit.sh  post-oneshot.sh  post-ws-complete.sh  pre-build.sh  pre-commit.sh  pre-deploy.sh  pre-push.sh  validate-artifacts.sh  validate-workstream.sh  verification-completion.sh
migrations/: 000001_create_campaigns.down.sql  000001_create_campaigns.up.sql  000002_create_banners.down.sql  000002_create_banners.up.sql  000004_create_clicks.up.sql  (+11 more)
(+1010 files in other folders)
