[tool.poetry]
name = "sdp"
version = "0.7.0"
description = "Spec-Driven Protocol - Workstream automation tools"
authors = ["MSU AI Masters <ai-masters@msu.ru>"]
readme = "README.md"
packages = [{include = "sdp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^2.1.1"
python-dotenv = "^1.0.0"
click = "^8.1.0"
pyyaml = "^6.0"
jsonschema = ">=4.20.0"
tomli = {version = "^2.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-watcher = "^0.4"
ruff = "^0.1"
mypy = "^1.7"
radon = "^6.0"
types-requests = "^2.31"
types-pyyaml = "^6.0.12.20250915"
pip-audit = "^2.7"

[tool.poetry.scripts]
# REMOVED: Python CLI entry points (migrated to Go)
# sdp = "sdp.cli:main"
# sdp-github = "sdp.github.cli:github"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "C90"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: Unit tests without external deps",
    "integration: Integration tests with external services",
]

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = ["--ignore=tests/integration", "-v"]
patterns = ["*.py"]
ignore_patterns = []
